--- a/Bankist/index.html
+++ b/Bankist/index.html
@@ -11,6 +11,16 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
+     <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
+
     <title>Bankist | When Banking meets Minimalist</title>
   </head>
   <body>
@@ -39,6 +49,11 @@
           </li>
         </ul>
       </nav>
+        <button class="drop-down">
+        <ion-icon name="menu-outline" class="menu-open menu-btn"></ion-icon>
+        <ion-icon name="close-outline" class="menu-close menu-btn"></ion-icon>
+      </button>
+
 
       <div class="header__title">
         <h1>
